modifying notebook to run

--- a/notebooks/Verification of Model Functionality.ipynb
+++ b/notebooks/Verification of Model Functionality.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,23 +52,28 @@
     "    r_data['districtId'] = [int(str(x).split('_')[1]) for x in r_data[\"myId\"]]\n",
     "    return {'results': r_data}\n",
     "\n",
+    "def processInfections(filename):\n",
+    "    r_data = pd.read_csv(filename, sep='\\t')\n",
+    "    return {'results': r_data}\n",
+    "    \n",
+    "\n",
     "def findROFInstance():\n",
     "    # total number of individuals infected by the introduction of an infectious person\n",
     "    return beta * n\n",
     "\n",
-    "def WorldBankMASONmodel(seed, paramfile, beta):\n",
+    "def WorldBankMASONmodel(myOutputPrefix, seed, paramfile, beta, numDays=30):\n",
     "    \n",
-    "    dataDir = \"/home/wb488473/Disease-Modelling-SSA/data/\"\n",
-    "    numDays = 30 * 6\n",
+    "    dataDir = \"/Users/swise/workspace/worldbank/Disease-Modelling-SSA/data/verification/\"#\"/home/wb488473/Disease-Modelling-SSA/data/\"\n",
     "    \n",
-    "    exportFilename = \"exportDailyMetrics_\" + seed + \"_\" + beta + \".txt\"\n",
-    "    exportInfectionsFilename = \"exportInfections_\" + seed + \"_\" + beta + \".txt\"\n",
+    "    exportFilename = myOutputPrefix + \"_\" + str(seed) + \"_\" + str(beta) + \".txt\"\n",
+    "    exportInfectionsFilename = myOutputPrefix + \"_Infections_\" + str(seed) + \"_\" + str(beta) + \".txt\"\n",
     "    \n",
-    "    subprocess.call(['java', '-Xms20G', '-jar', '../java/WorldBankCovid19/libs/WB_covid19ABM.jar', str(numDays), \n",
-    "                     dataDir, str(beta), seed, exportFilename, paramfile, exportInfectionsFilename])\n",
+    "    subprocess.call(['java', '-Xms6G', '-jar', '../java/WorldBankCovid19/libs/WB_covid19ABM.jar', str(numDays), \n",
+    "                     dataDir, str(beta), str(seed), exportFilename, paramfile, exportInfectionsFilename])\n",
     "    \n",
     "    # Sophie upped the -Xms to 20G from 6GB\n",
-    "    return processModelOutput(exportFilename)"
+    "    #return processModelOutput(exportFilename)\n",
+    "    return processInfections(exportInfectionsFilename)"
    ]
   },
   {
@@ -115,25 +120,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "written to...../data/verification/output/sweep_5per_bubbles30_1_0.1.txt\n"
+      "{'results':       Host    Source        Time LocOfTransmission ContagiousAt SymptomaticAt  \\\n",
+      "0   713078       NaN   -1.000000               d_1            0             -   \n",
+      "1   442301       NaN   -1.000000               d_1            0             -   \n",
+      "2   535782       NaN   -1.000000               d_1            0             -   \n",
+      "3   484735       NaN   -1.000000               d_1            0             -   \n",
+      "4   732628       NaN   -1.000000               d_1            0             8   \n",
+      "5    98542       NaN   -1.000000               d_1            0             -   \n",
+      "6   137829       NaN   -1.000000               d_1            0             9   \n",
+      "7   623316       NaN   -1.000000               d_1            0             -   \n",
+      "8   696403       NaN   -1.000000               d_1            0             8   \n",
+      "9   138114       NaN   -1.000000               d_1            0             7   \n",
+      "10   64173       NaN   -1.000000               d_1            0             -   \n",
+      "11  548164       NaN   -1.000000               d_1            0             -   \n",
+      "12  533979  535782.0    1.000000               d_1            -             -   \n",
+      "13  638652  713078.0    7.000000               d_1           35             -   \n",
+      "14  192890  138114.0   10.000000               d_1           37             -   \n",
+      "15  475445  484735.0   11.000000               d_1           38             -   \n",
+      "16  484829  484735.0   13.000000               d_1           41            51   \n",
+      "17  535740  535782.0   14.000000               d_1           41             -   \n",
+      "18  485268  548164.0   15.000000               d_1           43             -   \n",
+      "19  321906  713078.0   15.000000               d_1           44            52   \n",
+      "20  535965  535782.0   17.000000               d_1            -             -   \n",
+      "21  138743  137829.0   19.000000               d_1           47             -   \n",
+      "22  488998  732628.0   27.000000               d_1           55            63   \n",
+      "23  627622  623316.0   30.000000               d_1           57             -   \n",
+      "24  552338  548164.0   39.000000               d_1           68             -   \n",
+      "25  560140  638652.0   39.968618               d_1           68             -   \n",
+      "26  626181  623316.0   48.000000               d_1            -             -   \n",
+      "27  363753  137829.0   58.000000               d_1           87            96   \n",
+      "28  715692  638652.0   65.968618               d_1           95             -   \n",
+      "29  718002  485268.0   76.008564               d_1          105             -   \n",
+      "30  472001  484829.0   76.950441               d_1          104             -   \n",
+      "31  321407  321906.0   78.474242               d_1            -             -   \n",
+      "32  669462  484829.0   98.950441               d_1            -             -   \n",
+      "33  156536  488998.0  106.741316               d_1          135             -   \n",
+      "34  366368  156536.0  140.747787               d_1            -             -   \n",
+      "35   49284  363753.0  148.712374               d_1          177           184   \n",
+      "36   37675   49284.0  180.196790               d_1            -             -   \n",
+      "37   39130   49284.0  180.196790               d_1            -             -   \n",
+      "\n",
+      "   SevereAt CriticalAt  RecoveredAt DiedAt  \n",
+      "0         -          -           51      -  \n",
+      "1         -          -           52      -  \n",
+      "2         -          -           51      -  \n",
+      "3         -          -           52      -  \n",
+      "4         -          -           61      -  \n",
+      "5         -          -           51      -  \n",
+      "6         -          -           62      -  \n",
+      "7         -          -           51      -  \n",
+      "8         -          -           60      -  \n",
+      "9         -          -           61      -  \n",
+      "10        -          -           51      -  \n",
+      "11        -          -           53      -  \n",
+      "12        -          -            2      -  \n",
+      "13        -          -           88      -  \n",
+      "14        -          -           88      -  \n",
+      "15        -          -           91      -  \n",
+      "16        -          -          103      -  \n",
+      "17        -          -           92      -  \n",
+      "18        -          -           95      -  \n",
+      "19        -          -          106      -  \n",
+      "20        -          -           18      -  \n",
+      "21        -          -           98      -  \n",
+      "22        -          -          114      -  \n",
+      "23        -          -          109      -  \n",
+      "24        -          -          121      -  \n",
+      "25        -          -          119      -  \n",
+      "26        -          -           49      -  \n",
+      "27        -          -          149      -  \n",
+      "28        -          -          148      -  \n",
+      "29        -          -          158      -  \n",
+      "30        -          -          155      -  \n",
+      "31        -          -           79      -  \n",
+      "32        -          -           99      -  \n",
+      "33        -          -          187      -  \n",
+      "34        -          -          141      -  \n",
+      "35        -          -          237      -  \n",
+      "36        -          -          181      -  \n",
+      "37        -          -          181      -  }\n",
+      "{'results':           Host    Source        Time LocOfTransmission ContagiousAt  \\\n",
+      "0       713078       NaN   -1.000000               d_1            0   \n",
+      "1       442301       NaN   -1.000000               d_1            0   \n",
+      "2       535782       NaN   -1.000000               d_1            0   \n",
+      "3       484735       NaN   -1.000000               d_1            0   \n",
+      "4       732628       NaN   -1.000000               d_1            0   \n",
+      "...        ...       ...         ...               ...          ...   \n",
+      "748981  100161  105387.0  533.634765               d_1          560   \n",
+      "748982  367996  366956.0  534.644106               d_1          564   \n",
+      "748983  341810  466422.0  548.237770               d_1            -   \n",
+      "748984   62423  381827.0  580.522918               d_1          610   \n",
+      "748985  366098  367996.0  620.487571               d_1            -   \n",
+      "\n",
+      "       SymptomaticAt SevereAt CriticalAt RecoveredAt DiedAt  \n",
+      "0                  -        -          -          51      -  \n",
+      "1                  -        -          -          52      -  \n",
+      "2                  -        -          -          51      -  \n",
+      "3                  -        -          -          52      -  \n",
+      "4                  8        -          -          59      -  \n",
+      "...              ...      ...        ...         ...    ...  \n",
+      "748981           570        -          -         624      -  \n",
+      "748982           572        -          -         623      -  \n",
+      "748983             -        -          -         549      -  \n",
+      "748984             -        -          -         663      -  \n",
+      "748985             -        -          -         621      -  \n",
+      "\n",
+      "[748986 rows x 10 columns]}\n"
      ]
     }
    ],
    "source": [
-    "paramsPerScenario = [\"../data/verification/params_default1Dist\"]   \n",
+    "paramsPerScenario = [\"../data/verification/params_default1Dist.txt\"]   \n",
     "betasPerScenario = [0.03, 0.3]\n",
     "\n",
+    "outputs = {}\n",
     "for paramsFile in paramsPerScenario:\n",
     "    for myBeta in betasPerScenario:\n",
-    "        for i in range(10):\n",
-    "            WorldBankMASONmodel(\"sweep_default1Dist_betaComparison_\", i, paramsFile, myBeta)"
+    "        for i in range(1):\n",
+    "            myRunName = paramsFile + \"_\" + str(myBeta) + \"_\" + str(i)\n",
+    "            myO = WorldBankMASONmodel(\"sweep_default1Dist_betaComparison_\", i, paramsFile, myBeta)\n",
+    "            outputs[myRunName] = myO"
    ]
   },
   {
