--- a/notebooks/extras from Sarah's verification notebook.ipynb
+++ b/notebooks/extras from Sarah's verification notebook.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "612b12a4",
    "metadata": {},
    "source": [
     "Direct comparison of spikiness in bubble version"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85c121d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +39,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "735c1956",
    "metadata": {},
    "source": [
     "Calculating the r_eff"
@@ -50,7 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "048a7b5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +58,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8bb0b1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +70,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b066f11e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +79,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fddb7159",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +88,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce6bfa96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +97,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b4a4bec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +107,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4b885be",
    "metadata": {},
    "source": [
     "## Combining these constraints\n",
@@ -129,7 +119,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "103ccc2e",
    "metadata": {},
    "source": [
     "## Future work: interventions\n",
@@ -141,7 +130,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b16124aa",
    "metadata": {},
    "source": [
     "## Template \n",
@@ -155,7 +143,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a6d2162",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -163,7 +150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -177,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
