test publish on the graphs

--- a/notebooks/g_for_upgrade_docs.ipynb
+++ b/notebooks/g_for_upgrade_docs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualising outbreak curves"
+    "# Visualising outbreak curves - upgrade graphs"
    ]
   },
   {
