--- a/notebooks/callibration_paper/versions/Sensitivity_analysis_apr22.ipynb
+++ b/notebooks/callibration_paper/versions/Sensitivity_analysis_apr22.ipynb
@@ -1462,7 +1462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1476,7 +1476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
